--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main class="container">
     <section id="about">
         <h2>whoami</h2>
-        <p>I am an austrian CTF player that enjoys tinkering with CTF infra.</p>
+        <p>I am an Austrian CTF player that enjoys tinkering with CTF infra.</p>
         <p>
             Nobody likes people that "break" infra if there is a working exploit that should run.<br/>
             The firewall blocks ALL traffic? SLA is tanking because of an experimental setup? <br>
@@ -81,7 +81,36 @@
     -->
 </main>
 <footer class="text-center">
-    <ul class="list-inline d-flex justify-content-center gap-4">
+    <ul class="list-inline d-flex justify-content-center align-items-center gap-4">
+        <li>
+            <a href="https://ctftime.org/team/189088" target="_blank">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="auto" height="2rem"
+                     viewBox="0 0 283.46 79.33" xml:space="preserve" fill="currentColor" stroke="currentColor">
+                    <style type="text/css">
+                        .st0{stroke-width:5; fill-opacity:0;}
+                    </style>
+                    <g id="Layer_1">
+                        <polygon class="st0" points="0,79.52 154.36,79.52 283.46,79.52 283.46,0.19 0,0.19 33.23,40.29"/>
+                        <polygon class="st1" points="61.92,57.92 80.47,57.92 80.47,51.68 74.06,51.68 74.06,51.68 69.3,51.68 69.3,27.9 74.06,27.9
+                            74.06,27.9 80.47,27.9 80.47,21.02 61.92,21.02 	"/>
+                        <polygon class="st1" points="86.32,28.11 91.6,28.11 91.6,57.92 98.98,57.92 98.98,28.11 104.25,28.11 104.25,21.02 86.32,21.02
+                            "/>
+                        <polygon class="st1" points="110.3,57.63 117.69,57.63 117.69,42.88 126.9,42.88 126.9,37.15 117.69,37.15 117.69,27.9
+                            129.02,27.9 129.02,21.02 110.3,20.73 	"/>
+                        <polygon class="st1" points="182.79,25.34 188.33,25.34 188.33,57.92 192.76,57.92 192.76,25.34 198.29,25.34 198.29,21.02
+                            182.79,21.02 	"/>
+                        <rect x="203.31" y="21.02" class="st1" width="4.43" height="36.9"/>
+                        <polygon class="st1" points="224.16,34.52 218.89,21.02 214.52,21.02 214.52,57.92 218.89,57.92 218.89,31.78 224.16,45.06
+                            229.43,31.78 229.43,57.92 233.81,57.92 233.81,21.02 229.43,21.02 	"/>
+                        <polygon class="st1" points="244.77,53.6 244.77,41.58 252.15,41.58 252.15,37.26 244.77,37.26 244.77,25.34 256.88,25.34
+                            258.04,21.02 240.34,21.02 240.34,57.92 257.85,57.92 256.69,53.6 	"/>
+                        <path class="st1" d="M135.54,21.02v36.9h39.7v-36.9H135.54z M169.83,52.89h-28.87V26.05h28.87V52.89z"/>
+                        <polygon class="st1" points="153.91,39.38 147.8,45.48 151.83,49.05 161.24,39.65 145.16,23.57 138.1,23.57 	"/>
+                    </g>
+                </svg>
+                <span class="visually-hidden">CTF</span>
+            </a>
+        </li>
         <li>
             <a href="https://github.com/OMPStack" target="_blank">
                 <i class="bi bi-github"></i>
